; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/32x/extr_32x.c_Pico32xStateLoaded.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/32x/extr_32x.c_Pico32xStateLoaded.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@sh2s = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Pico32xStateLoaded(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %1
  %6 = call i32 (...) @Pico32xMemStateLoaded()
  br label %20

7:                                                ; preds = %1
  %8 = call i32 (...) @SekCyclesDone()
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @sh2s, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i64 1
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store i32 %8, i32* %11, align 4
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @sh2s, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i64 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store i32 %8, i32* %14, align 4
  %15 = call i32 (...) @SekCyclesDone()
  %16 = call i32 @p32x_update_irls(i32* null, i32 %15)
  %17 = call i32 (...) @p32x_pwm_state_loaded()
  %18 = call i32 (...) @SekCyclesDone()
  %19 = call i32 @p32x_run_events(i32 %18)
  br label %20

20:                                               ; preds = %7, %5
  ret void
}

declare dso_local i32 @Pico32xMemStateLoaded(...) #1

declare dso_local i32 @SekCyclesDone(...) #1

declare dso_local i32 @p32x_update_irls(i32*, i32) #1

declare dso_local i32 @p32x_pwm_state_loaded(...) #1

declare dso_local i32 @p32x_run_events(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
